попытка сделать адаптив на 320

--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -577,6 +577,33 @@
           <a class="card-events__details" href="#">Подробнее</a>
         </div>
       </div>
+
+      <div class="card-events">
+        <img src="img/events/1.webp" alt="" class="card__img">
+        <div class="card-events__content">
+          <div class="card-events__location">Музей им. Щусева</div>
+          <div class="card-events__date">с 20 марта по 30 апреля</div>
+          <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
+          <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
+            династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+          <a class="card-events__details" href="#">Подробнее</a>
+        </div>
+      </div>
+
+      <div class="card-events">
+        <img src="img/events/1.webp" alt="" class="card__img">
+        <div class="card-events__content">
+          <div class="card-events__location">Музей им. Щусева</div>
+          <div class="card-events__date">с 20 марта по 30 апреля</div>
+          <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
+          <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
+            династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+          <a class="card-events__details" href="#">Подробнее</a>
+        </div>
+      </div>
+
+      <div class="card-events">
+      </div>
     </div>
     <button class="event__btn btn">Все события </button>
   </section>
