320(не пиксель перфект)

--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -541,81 +541,82 @@
   </section>
   <section class="events container">
     <h2 class="events__title h2">События</h2>
-    <div class="events__cards">
-      <div class="card-events">
-        <img src="img/events/1.webp" alt="" class="card__img">
-        <div class="card-events__content">
-          <div class="card-events__location">Музей им. Щусева</div>
-          <div class="card-events__date">с 20 марта по 30 апреля</div>
-          <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
-          <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
-            династии, которую продолжили его брат Давид и сын Ридольфо.</p>
-          <a class="card-events__details" href="#">Подробнее</a>
+    <div class="events__swiper-container">
+      <div class="events__cards swiper-wrapper">
+        <div class="card-events">
+          <img src="img/events/1.webp" alt="" class="card__img">
+          <div class="card-events__content">
+            <div class="card-events__location">Музей им. Щусева</div>
+            <div class="card-events__date">с 20 марта по 30 апреля</div>
+            <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
+            <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
+              династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+            <a class="card-events__details" href="#">Подробнее</a>
+          </div>
         </div>
-      </div>
 
-      <div class="card-events">
-        <img src="img/events/2.webp" alt="" class="card__img">
-        <div class="card-events__content">
-          <div class="card-events__location">ММОМА</div>
-          <div class="card-events__date">24 марта 19:00</div>
-          <h3 class="card-events__title">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
-          <p class="card-events__description">Высокий уровень вовлечения представителей целевой аудитории является четким
-            доказательством простого факта.</p>
-          <a class="card-events__details" href="#">Подробнее</a>
+        <div class="card-events">
+          <img src="img/events/2.webp" alt="" class="card__img">
+          <div class="card-events__content">
+            <div class="card-events__location">ММОМА</div>
+            <div class="card-events__date">24 марта 19:00</div>
+            <h3 class="card-events__title">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
+            <p class="card-events__description">Высокий уровень вовлечения представителей целевой аудитории является четким
+              доказательством простого факта.</p>
+            <a class="card-events__details" href="#">Подробнее</a>
+          </div>
         </div>
-      </div>
 
-      <div class="card-events">
-        <img src="img/events/3.webp" alt="" class="card__img">
-        <div class="card-events__content">
-          <div class="card-events__location">Еврейский музей</div>
-          <div class="card-events__date">с 31 марта по 21 апреля</div>
-          <h3 class="card-events__title">Выставка «Формация 2020»</h3>
-          <p class="card-events__description">Идейные соображения высшего порядка, а также современная методология разработки
-            играет важную роль в формировании глубокомысленных рассуждений.</p>
-          <a class="card-events__details" href="#">Подробнее</a>
+        <div class="card-events">
+          <img src="img/events/3.webp" alt="" class="card__img">
+          <div class="card-events__content">
+            <div class="card-events__location">Еврейский музей</div>
+            <div class="card-events__date">с 31 марта по 21 апреля</div>
+            <h3 class="card-events__title">Выставка «Формация 2020»</h3>
+            <p class="card-events__description">Идейные соображения высшего порядка, а также современная методология разработки
+              играет важную роль в формировании глубокомысленных рассуждений.</p>
+            <a class="card-events__details" href="#">Подробнее</a>
+          </div>
         </div>
-      </div>
 
-      <div class="card-events">
-        <img src="img/events/1.webp" alt="" class="card__img">
-        <div class="card-events__content">
-          <div class="card-events__location">Музей им. Щусева</div>
-          <div class="card-events__date">с 20 марта по 30 апреля</div>
-          <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
-          <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
-            династии, которую продолжили его брат Давид и сын Ридольфо.</p>
-          <a class="card-events__details" href="#">Подробнее</a>
+        <div class="card-events">
+          <img src="img/events/4.webp" alt="" class="card__img">
+          <div class="card-events__content">
+            <div class="card-events__location">Третьяковка на Крымском валу</div>
+            <div class="card-events__date">с 30 марта по 30 апреля</div>
+            <h3 class="card-events__title">XXIV Международная биеннале молодого искусства</h3>
+            <p class="card-events__description">Внезапно, реплицированные с зарубежных источников, современные исследования.</p>
+            <a class="card-events__details" href="#">Подробнее</a>
+          </div>
         </div>
-      </div>
 
-      <div class="card-events">
-        <img src="img/events/1.webp" alt="" class="card__img">
-        <div class="card-events__content">
-          <div class="card-events__location">Музей им. Щусева</div>
-          <div class="card-events__date">с 20 марта по 30 апреля</div>
-          <h3 class="card-events__title">Книжная гравюра в живом восприятии</h3>
-          <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной
-            династии, которую продолжили его брат Давид и сын Ридольфо.</p>
-          <a class="card-events__details" href="#">Подробнее</a>
+        <div class="card-events">
+          <img src="img/events/5.webp" alt="" class="card__img">
+          <div class="card-events__content">
+            <div class="card-events__location">ММАМ</div>
+            <div class="card-events__date">с 8 апреля по 20 мая</div>
+            <h3 class="card-events__title">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+            <p class="card-events__description">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+            <a class="card-events__details" href="#">Подробнее</a>
+          </div>
         </div>
-      </div>
 
-      <div class="card-events">
+        <div class="card-events">
+        </div>
       </div>
     </div>
     <button class="event__btn btn">Все события </button>
+    <div class="swiper-pagination__events"></div>
   </section>
   <section class="editions">
     <div class="container">
       <div class="editions__content">
         <div class="editions__ledt-column">
           <h2 class="editions__title h2">Издания</h2>
-          <h3 class="checkbox__title">Категории</h3>
+          <button disabled class="checkbox__title">Категории</button>
           <div class="checkbox checkbox__list">
             <div class="checkbox__item">
-              <input class="checkbox__input" id="check-1" type="checkbox" checked>
+              <input class="checkbox__input" id="check-1" type="checkbox">
               <label class="checkbox__label" for="check-1">Бестселлеры</label>
             </div>
 
@@ -691,7 +692,7 @@
             <span class="swiper-pagination-1"></span>
             <div class="swiper-button-next-1"></div>
           </div>
-          <div class="swiper-wrapper">
+          <div class="cards-editions swiper-wrapper">
             <div class="card-editions swiper-slide">
               <img class="slide-img slide-img__editions" src="img/editions/1.webp" alt="">
               <div class="card-editions__desc">
@@ -807,7 +808,7 @@
   </section>
   <section class="contacts">
     <h2 class="contacts__title h2 container">Контакты</h2>
-    <div class="flex">
+    <div class="contacts__flex">
       <div class="connect">
         <div class="connect__title">Шоурум №4</div>
         <div class="connect__adds">Леонтьевский переулок, дом 5, строение 1</div>
@@ -821,7 +822,7 @@
           <a class="connect__link" href="#"><img src="img/contacts/telegram.svg" alt="telegram"></a>
         </div>
       </div>
-      <div id="map" style="width: 1263px; height: 702px"></div>
+      <div id="map"></div>
     </div>
   </section>
   <footer class="footer">
