--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -47,24 +47,15 @@
           <span class="burger__line"></span>
         </button>
 
-        <button class="search__btn search__btn_open"><svg width="30" height="30" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <button class="search__btn search__btn-open"><svg viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="6.8678" height="1.71695"
             transform="matrix(-0.718931 0.695081 0.718931 0.695081 4.9375 15.6534)" fill="white" />
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M12.0969 18C7.53041 18 3.99692 14.3229 3.99692 10C3.99692 5.67715 7.53041 2 12.0969 2C16.6634 2 20.1969 5.67715 20.1969 10C20.1969 14.3229 16.6634 18 12.0969 18ZM12.0969 20C6.57408 20 2.09692 15.5228 2.09692 10C2.09692 4.47715 6.57408 0 12.0969 0C17.6198 0 22.0969 4.47715 22.0969 10C22.0969 15.5228 17.6198 20 12.0969 20Z"
             fill="white" />
-        </svg></button>
-
-        <form class="first__search search">
-          <button class="search__btn"><svg width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect width="6.8678" height="1.71695"
-                transform="matrix(-0.718931 0.695081 0.718931 0.695081 4.9375 15.6534)" fill="white" />
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M12.0969 18C7.53041 18 3.99692 14.3229 3.99692 10C3.99692 5.67715 7.53041 2 12.0969 2C16.6634 2 20.1969 5.67715 20.1969 10C20.1969 14.3229 16.6634 18 12.0969 18ZM12.0969 20C6.57408 20 2.09692 15.5228 2.09692 10C2.09692 4.47715 6.57408 0 12.0969 0C17.6198 0 22.0969 4.47715 22.0969 10C22.0969 15.5228 17.6198 20 12.0969 20Z"
-                fill="white" />
-            </svg></button>
-          <input class="search__input hide" type="search" placeholder="Поиск по сайту">
-        </form>
+          </svg>
+        </button>
+        <button class="btn__close"></button>
       </div>
     </div>
     <div class="header__second_bg">
@@ -157,7 +148,7 @@
           </li>
         </ul>
         <form class="header__search search">
-          <button class="search__btn"><svg width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button class="search__btn"><svg viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="6.8678" height="1.71695"
                 transform="matrix(-0.718931 0.695081 0.718931 0.695081 4.9375 15.6534)" fill="white" />
               <path fill-rule="evenodd" clip-rule="evenodd"
