--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Blanchard</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -31,7 +31,7 @@
         <img class="logo" src="img/header/logo.svg" alt="logo">
         <nav class="first__menu menu">
           <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" data-goto=".about" href="#">О нас</a></li>
+            <li class="menu__item"><a class="menu__link" data-goto=".about" href="#">О&nbspнас</a></li>
             <li class="menu__item"><a class="menu__link" data-goto=".gallery" href="#">Галерея</a></li>
             <li class="menu__item"><a class="menu__link" data-goto=".catalog" href="#">Каталог</a></li>
             <li class="menu__item"><a class="menu__link" data-goto=".events" href="#">События</a></li>
@@ -165,9 +165,9 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide slide-1">
           <picture class="hero__img">
-            <source srcset="img/hero/hero-1s.jpg" media="(max-width: 320px)">
-            <source srcset="img/hero/hero-1m.jpg" media="(max-width: 768px)">
-            <source srcset="img/hero/hero-1l.jpg" media="(max-width: 1024px)">
+            <source srcset="img/hero/hero-1s.webp" media="(max-width: 320px)">
+            <source srcset="img/hero/hero-1m.webp" media="(max-width: 768px)">
+            <source srcset="img/hero/hero-1l.webp" media="(max-width: 1024px)">
             <img class="animation-hero"  src="img/hero/hero-1xxl.webp" alt="">
           </picture>
         </div>
@@ -284,10 +284,10 @@
           </div>
 
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-1.jpg" alt="">
+            <img src="img/gallery/4-1.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-2.jpg" alt="">
+            <img src="img/gallery/4-2.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
             <img src="img/gallery/4-3.webp" alt="">
