доработал скролл на кнопке "все события"

--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -593,7 +593,7 @@
         </div>
       </div>
     </div>
-    <button class="event__btn btn">Все события </button>
+    <button class="event__btn btn" data-goto=".events">Все события</button>
     <div class="swiper-pagination__events"></div>
   </section>
   <section class="editions">
