--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -658,18 +658,18 @@
               <label class="checkbox__label" for="check-11">Учебная литература</label>
             </div>
 
-            <div class="checkbox__item">
+            <div class="checkbox__item" tabindex="0">
               <input class="checkbox__input" id="check-12" type="checkbox">
               <label class="checkbox__label" for="check-12">Журналы и газеты</label>
             </div>
           </div>
           <div class="price">
-            <div class="price_title">Цена</div>
+            <h4 class="price__title">Цена</h4>
             <div class="price__content">
-              <span class="from">От</span>
-              <input type="text">
-              <span class="to">до</span>
-              <input type="text">
+              <label for="price-from" class="from">От</label>
+              <input id="price-from" type="text">
+              <label for="price-to" class="to">до</label>
+              <input id="price-to" type="text">
               <span class="value">руб.</span>
             </div>
           </div>
