--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -228,96 +228,94 @@
           <div class="swiper-button-next-1"></div>
         </div>
         <div class="swiper-wrapper">
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-1.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-2.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-3.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-4.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-5.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/1-6.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-1.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-2.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-3.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-4.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-5.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/2-6.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-1.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-2.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-3.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-4.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-5.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/3-6.webp" alt="">
           </div>
-
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-1.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-2.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-3.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-4.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-5.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/4-6.webp" alt="">
           </div>
-
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-1.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-2.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-3.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-4.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-5.webp" alt="">
           </div>
-          <div class="swiper-slide slide-img">
+          <div class="swiper-slide slide-img gallery__slide-img">
             <img src="img/gallery/5-6.webp" alt="">
           </div>
         </div>
