--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -223,9 +223,9 @@
 
       <div class="swiper-container__btn">
         <div class="swiper__nav">
-          <div class="swiper-button-prev-1"></div>
-          <span class="swiper-pagination-1"></span>
-          <div class="swiper-button-next-1"></div>
+          <div class="gallery__swiper-button-prev swiper-button-prev-1"></div>
+          <span class="gallery__swiper-pagination swiper-pagination-1"></span>
+          <div class="gallery__swiper-button-next swiper-button-next-1"></div>
         </div>
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-img gallery__slide-img">
@@ -674,9 +674,9 @@
         </div>
         <div class="swiper-container__editions">
           <div class="swiper__nav">
-            <div class="swiper-button-prev-1"></div>
-            <span class="swiper-pagination-1"></span>
-            <div class="swiper-button-next-1"></div>
+            <div class="editions__swiper-button-prev swiper-button-prev-1"></div>
+            <span class="editions__swiper-pagination swiper-pagination-1"></span>
+            <div class="editions__swiper-button-next swiper-button-next-1"></div>
           </div>
           <div class="cards-editions swiper-wrapper">
             <div class="card-editions swiper-slide">
@@ -776,8 +776,8 @@
     </p>
     <h3 class="projects__partners">Партнёры проектов:</h3>
     <div class="projects__btn">
-      <div class="swiper-button-prev-1"></div>
-      <div class="swiper-button-next-1"></div>
+      <div class="projects__swiper-button-prev swiper-button-prev-1"></div>
+      <div class="projects__swiper-button-next swiper-button-next-1"></div>
     </div>
     <div class="swiper-container__projects">
       <div class="swiper-wrapper">
